--- a/config.json
+++ b/config.json
@@ -94,7 +94,7 @@
             "content": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/spec2.json",
             "config": {
                 "overview": {
-                    "markdownPath": "docs/overview.md",
+                    "markdownPath": "docs/overview.md"
                     
                 },
                 "theme":"meraki",
