--- a/config.json
+++ b/config.json
@@ -111,9 +111,9 @@
                     }
                 },
                 "variables": {
-                    "organizationId": "549236",
-                    "networkId": "L_646829496481105433",
-                    "serial": "Q2QN-9J8L-SLPD"
+                    "organizationId": "1215707",
+                    "networkId": "N_784752235069315754",
+                    "serial": "QBSB-VQ3J-XZ54"
                 }
             }
         },
@@ -138,9 +138,9 @@
                 "exampleAsDefault": true,
                 "expand": 3,
                 "variables": {
-                    "organizationId": "549236",
-                    "networkId": "L_646829496481105433",
-                    "serial": "Q2QN-9J8L-SLPD"
+                    "organizationId": "1215707",
+                    "networkId": "N_784752235069315754",
+                    "serial": "QBSB-VQ3J-XZ54"
                 }
             }
         },
