--- a/config.json
+++ b/config.json
@@ -100,6 +100,12 @@
                 "apiKeyGenerator": {
                     "$remoteModule": "config/api_key.js"
                 },
+                "labelConfig": {
+                    "endpoint": {
+                        "field": "operationId",
+                        "format": "startCase"
+                    }
+                }, 
                 "groupBy": {
                     "$remoteModule": "config/group_platform.js"
                 },
@@ -134,6 +140,12 @@
                 "apiKeyGenerator": {
                     "$remoteModule": "config/api_key.js"
                 },
+                "labelConfig": {
+                    "endpoint": {
+                        "field": "operationId",
+                        "format": "startCase"
+                    }
+                }, 
                 "groupBy": {
                     "$remoteModule": "config/group_platform.js"
                 },
