--- a/config.json
+++ b/config.json
@@ -140,6 +140,9 @@
                 "apiKeyGenerator": {
                     "$remoteModule": "config/api_key.js"
                 },
+                "httpBearer": {
+                     "bearerToken": 'Bearer 75dd5334bef4d2bc96f26138c163c0a3fa0b5ca6'
+                }, 
                 "labelConfig": {
                     "endpoint": {
                         "field": "operationId",
