testing bearer auth

--- a/config.json
+++ b/config.json
@@ -97,9 +97,9 @@
                     "markdownPath": "docs/overview.md"
                 },
                 "theme": "meraki",
-                "apiKeyGenerator": {
-                    "$remoteModule": "config/api_key.js"
-                },
+                 "httpBearer": {
+                     "bearerToken": "75dd5334bef4d2bc96f26138c163c0a3fa0b5ca6"
+                }, 
                 "labelConfig": {
                     "endpoint": {
                         "field": "operationId",
