--- a/.github/workflows/regenerate_python_library_snippets.yml
+++ b/.github/workflows/regenerate_python_library_snippets.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Download newest generator
         run: |
           curl https://github.com/meraki/dashboard-api-python/raw/main/generator/generate_snippets.py -o generate_snippets.py
+      - name: Set permissions
+        run: |
+          chmod 755 generate_snippets.py
       - name: Regenerate Python Library snippets
         run: |
           python generate_snippets.py
