--- a/config.json
+++ b/config.json
@@ -97,6 +97,7 @@
                     "markdownPath": "docs/overview.md"
                 },
                 "theme": "meraki",
+                "serverConfig": true,
                 "httpBearer": {
                     "bearerToken": "75dd5334bef4d2bc96f26138c163c0a3fa0b5ca6"
                 },
@@ -137,6 +138,7 @@
                     "markdownPath": "docs/overview-early-access.md"
                 },
                 "theme": "meraki",
+                "serverConfig": true,
                 "httpBearer": {
                     "bearerToken": "75dd5334bef4d2bc96f26138c163c0a3fa0b5ca6"
                 },
