--- a/config.json
+++ b/config.json
@@ -98,6 +98,9 @@
                 },
                 "theme": "meraki",
                 "serverConfig": true,
+                "meta": {
+                    "useProxy": true
+                        },
                 "httpBearer": {
                     "bearerToken": "75dd5334bef4d2bc96f26138c163c0a3fa0b5ca6"
                 },
