using an html page for the table

--- a/config.json
+++ b/config.json
@@ -61,7 +61,8 @@
                         },
                         {
                             "title": "Supported Resources",
-                            "content": "docs/ActionBatchesResources.md"
+                            "content": "docs/ActionBatchesResources.html",
+                            "type":"html"
                         }
                     ]
                 },
